# mopmc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  configure.sh  run.sh  test-run.sh
examples/dive_and_rise/: dive_and_rise_prop_ccq_10.props  dive_and_rise_prop_ccq_100.props  dive_and_rise_prop_ccq_20.props  dive_and_rise_prop_ccq_v2_100.props  dive_and_rise_prop_cq_60.props  dive_and_rise_prop_v2_10.props  dive_and_rise_prop_v2_100.props  dive_and_rise_prop_v2_60.props  dive_and_rise_prop_v2_80.props  dive_and_rise_prop_v2_90.props  dive_and_rise_state_rewards.nm
examples/switch_model/: switch_metrics.props  switch_metrics_mo.props  switch_metrics_mo2.props  switch_metrics_no_multi.props  switch_model.prism  switch_model_c1.prism  switch_model_c2.prism  switch_model_c3.prism  switch_model_c4.prism  switch_model_pri_ctrl_only.prism  switch_model_unif.prism
examples/team_formulation_protocol/: team_3.nm  team_4.nm  team_5.nm
examples/team_formulation_protocol/team_3_props/: obj_02.pctl  obj_04.pctl  obj_07.pctl  obj_10.pctl
misc/: achievability_results  achievability_test  cmake_find_package_cudatoolkit.sh  cmake_find_package_storm.sh  dive_and_rise.py  dive_and_rise_props.py  dive_and_rise_props1.py  docker_image_build  find_package
misc/dockerfiles/mopmc-base-env/: note.md  (+1 more)
misc/python_scripts/: dive_and_rise.py  dive_and_rise_action_rewards.py  dive_and_rise_props_fixed_value.py  dive_and_rise_props_increased_values.py
src/: main.cpp
src/mopmc-src/: CMakeLists.txt  Exporter.cpp  Exporter.h  ModelBuilder.cpp  ModelBuilder.h  Printer.h  QueryData.h  QueryOptions.h  Runner.cpp  Runner.h  Transformation.cpp  Transformation.h
src/mopmc-src/_future/: CMakeLists.txt
src/mopmc-src/_future/hybrid-computing/: Looper.cpp  Looper.h
src/mopmc-src/_future/queries/: CMakeLists.txt  ConvexQueryV2.cpp  ConvexQueryV2.h
src/mopmc-src/_legacy/: CMakeLists.txt
src/mopmc-src/_legacy/convex-functions/: CMakeLists.txt  EuclideanDistance.h  KLDistance.h  SignedKLEuclidean.h  TotalReLU.h
src/mopmc-src/_legacy/model-checking/: MOPMCModelChecking.cpp  SparseMultiObjective.cpp
src/mopmc-src/_legacy/optimizers/: CMakeLists.txt  FrankWolfe.cpp  FrankWolfe.h  ProjectedGradientDescent.cpp  ProjectedGradientDescent.h  ProjectedGradientV1.cpp  ProjectedGradientV1.h
src/mopmc-src/_legacy/queries/: CMakeLists.txt  ConvexQuery.cpp  ConvexQueryV0.cpp  ConvexQueryV0.h  UnconstrainedConvexQuery.cpp  UnconstrainedConvexQuery.h
src/mopmc-src/_legacy/solvers/: CMakeLists.txt  ConvexQueryAux.cpp  ConvexQueryAux.h  CudaOnlyValueIteration.cpp
src/mopmc-src/_legacy/strom-wrappers/: CMakeLists.txt  StormModelBuildingWrapper.cpp  StormModelBuildingWrapper.h
src/mopmc-src/auxiliary/: CMakeLists.txt  Lincom.cpp  Lincom.h  LineSearch.h  Sorting.cpp  Sorting.h  Trigonometry.cpp  Trigonometry.h  VectorConversion.cpp  VectorConversion.h
src/mopmc-src/convex-functions/: BaseConvexFunction.h  CMakeLists.txt  MSE.cpp  MSE.h
src/mopmc-src/future/hybrid-computing/: HybridController.h  Looper.cpp
src/mopmc-src/optimizers/: BaseOptimizer.h  CMakeLists.txt  FrankWolfe.cpp  FrankWolfe.h  FrankWolfeInnerOptimizer.cpp  FrankWolfeInnerOptimizer.h  FrankWolfeInnerPolytope.cpp  FrankWolfeInnerPolytope.h  FrankWolfeMethod.cpp  FrankWolfeMethod.h  FrankWolfeOuterOptimization.cpp  FrankWolfeOuterOptimization.h  FrankWolfeOuterOptimizer.cpp  FrankWolfeOuterOptimizer.h  FrankWolfeOuterPolytope.cpp  FrankWolfeOuterPolytope.h  HalfspacesIntersection.cpp  HalfspacesIntersection.h  HalfspacesIntersectionCheck.cpp  HalfspacesIntersectionCheck.h  LinOpt.cpp  LinOpt.h  LineSearch.cpp  LineSearch.h  MaximumMarginSeparationHyperplane.cpp  MaximumMarginSeparationHyperplane.h  MinimumNormPoint.cpp  MinimumNormPoint.h  ProjectedGradient.cpp  ProjectedGradient.h  ProjectedGradientDescent.cpp  ProjectedGradientDescent.h  ProjectedGradientV1.cpp  ProjectedGradientV1.h  SeparationHyperplaneOptimizer.cpp  SeparationHyperplaneOptimizer.h
src/mopmc-src/queries/: AchievabilityQuery.cpp  AchievabilityQuery.h  BaseQuery.h  CMakeLists.txt  ConstrainedConvexQuery.cpp  ConstrainedConvexQuery.h  ConvexQuery.cpp  ConvexQuery.h  ConvexQuery2.cpp  ConvexQuery2.h  ConvexQueryAlt.cpp  ConvexQueryAlt.h  UnconstrainedConvexQuery.cpp  UnconstrainedConvexQuery.h
src/mopmc-src/solvers/: BaseValueIteration.h  CMakeLists.txt  CudaFunctions.cu  CudaFunctions.h  CudaValueIteration.cu  CudaValueIteration.cuh  CudaWarmUp.cu  CudaWarmUp.h  ValueIteration.cpp  ValueIteration.h
src/mopmc-src/storm-wrappers/: CMakeLists.txt  StormModelBuildingWrapper.cpp
(+13 files in other folders)
