cmake_minimum_required(VERSION 3.22)
project(mopmc LANGUAGES CXX C CUDA VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O1")
set(CMAKE_CUDA_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3)
set(Sources)
set(TestSources)
add_subdirectory(src)
add_subdirectory(lpSolve)
add_executable(${PROJECT_NAME} "${Sources}")
find_package(storm REQUIRED)
find_package(CUDAToolkit REQUIRED)
enable_testing()
message(STATUS ${storm_INCLUDE_DIR})
message(STATUS ${CUDAToolkit_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PUBLIC ${storm_INCLUDE_DIR} ${CUDAToolkit_INCLUDE_DIRS} lpSolve PRIVATE src)
target_link_directories(${PROJECT_NAME} PUBLIC lpSolve)
target_link_libraries(${PROJECT_NAME} PRIVATE storm storm-parsers lpsolve55 CUDA::cudart CUDA::cusparse CUDA::cublas)